minijinja/tests/snapshots/test_templates__vm@err_toplevel_continue.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% continue %}"
info: {}
input_file: minijinja/tests/inputs/err_toplevel_continue.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "'continue' must be placed inside a loop",
    name: "err_toplevel_continue.txt",
    line: 1,
}

syntax error: 'continue' must be placed inside a loop (in err_toplevel_continue.txt:1)
-------------------------- err_toplevel_continue.txt --------------------------
   1 > {% continue %}
     i    ^^^^^^^^ syntax error
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
